Correction de la barre outils et htaccess

--- a/.htaccess
+++ b/.htaccess
@@ -8,4 +8,5 @@ RewriteRule ^User$ cours.php?c=User [L,NC]
 RewriteRule ^Admin/([a-z]+)/([0-9]+)$ cours.php?c=Admin&a=$1&id=$2 [L,NC]
 RewriteRule ^Admin/([a-z]+)? cours.php?c=Admin&a=$1 [L,NC]
 RewriteRule ^Admin? cours.php?c=Admin [L,NC]
+RewriteRule ^Cours/([a-z]+)/([0-9]+)? cours.php?&a=$1&id=$2 [L,NC]
 RewriteRule ^Cours/([a-z]+)? cours.php?&a=$1 [L,NC]
