--- a/.htaccess
+++ b/.htaccess
@@ -3,6 +3,7 @@ RewriteEngine on
 
 RewriteBase /projet-tuteure/
 RewriteRule ^Accueil$ cours.php [L,NC]
+RewriteRule ^User/([a-z]+)/([0-9]+)/(.+)?$ cours.php?c=User&a=$1&id=$2&link=$3 [L,NC]
 RewriteRule ^User/([a-z]+)$ cours.php?c=User&a=$1 [L,NC]
 RewriteRule ^User$ cours.php?c=User [L,NC]
 RewriteRule ^Admin/([a-z]+)/([0-9]+)$ cours.php?c=Admin&a=$1&id=$2 [L,NC]
